# NCYouthRobotics

./: .gitignore  Dockerfile  README.md  deploy.sh  main.tex
.github/workflows/: docker-cli.yml
Arduino/include/: motor.h
Arduino/src/: main.cpp
ros2ws/src/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_control/demos/: bartender.py  ee_pose_components.py  ee_pose_matrix_control.py  joint_position_control.py
ros2ws/src/robot_command_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2ws/src/robot_command_node/src/: command_node.cpp
ros2ws/src/robot_drive_interface/: CMakeLists.txt  package.xml
ros2ws/src/robot_drive_interface/launch/: multi_node.launch.py
ros2ws/src/robot_drive_interface/src/: drive_node.cpp  video_publisher.cpp
ros2ws/src/robot_msgs/: CMakeLists.txt  package.xml
ros2ws/src/robot_msgs/msg/: ObjectDetection.msg
ros2ws/src/robot_perception/: package.xml  setup.py
ros2ws/src/robot_perception/robot_perception/: stream_perception.py
shared/: CMakeLists.txt
shared/include/shared_defs/: RobotIO.h
